fix(example): Fix Spring Boot example compilation errors
- Replace non-existent Veld HTTP annotations with Spring annotations
- Change @Path/@RestController to @RequestMapping/@RestController
- Replace @Path with @PathVariable for path parameters
- Add missing Spring Web imports
- Fix .toList() Java 16+ method to .collect(Collectors.toList()) for Java 11 compatibility
- Use @Component with @RequestMapping for Veld components acting as REST controllers

Veld is a pure DI framework and does not provide HTTP annotations like Spring.
The example now correctly uses Spring annotations for HTTP/REST while using
Veld annotations for dependency injection and component management.