@@ -11,6 +11,7 @@ import org.slf4j.LoggerFactory;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * Veld component for user management demonstrating Veld -> Spring repository bridging.
@@ -155,7 +156,7 @@ public class UserManagementService {
                     user.getUsername().toLowerCase().contains(lowerQuery) ||
                     user.getEmail().toLowerCase().contains(lowerQuery) ||
                     user.getFullName().toLowerCase().contains(lowerQuery))
-                .toList();
+                .collect(Collectors.toList());
     }
     
     /**
